test/files/neg/t12159c.check
s_2.scala:7: warning: match may not be exhaustive.
It would fail on the following input: K()
    h match {
    ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
